# Carsharing

./: .env.example  .gitignore  Dockerfile  Dockerfile.ui  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: __init__.py
app/api/: deps.py  errors.py  main.py  middleware.py
app/core/: api_constants.py  config.py  logger.py  payload_examples.py  schemas.py
app/data/: dataset.py  loader.py  pipeline.py  preprocessing.py  schema.py  split.py
app/features/: ablation.py  build_features.py
app/models/: baselines.py  benchmark.py  evaluate.py  net.py  predict.py  train.py  utils.py
app/services/: config_helpers.py  data_service.py  evaluation_service.py  inference_service.py  prediction_service.py  status_service.py  training_service.py
app/ui/: __init__.py  utils.py  (+4 more)
configs/: config.yaml
docs/: 01_problem_statement.md  02_business_context.md  03_data_description.md  04_modeling_decisions.md  05_metrics_and_validation.md  06_api_usage.md  07_deployment.md  08_data_pipeline.md  09_baselines_and_ablations.md  DIPLOMA_THESIS_BASE.md  PROJECT_GUIDE.md  PROJECT_STRUCTURE.md  defense_demo_guide.md  defense_narrative.md  Пояснение_для_защиты_как_устроен_проект.txt  Речь_для_защиты.txt
examples/: batch_predict_request.json  single_predict_request.json
notebooks/: eda.ipynb
scripts/: compare_baselines.py  evaluate.py  generate_demo_data.py  launch_ui.py  predict.py  prepare_data.py  train.py
tests/: conftest.py  test_api.py  test_baselines.py  test_data_schema.py  test_evaluate_metrics.py  test_predict.py  test_preprocessing.py  test_train.py
(+11 files in other folders)
